Fix image being stretched in safari

--- a/static/css/guide.css
+++ b/static/css/guide.css
@@ -3,6 +3,7 @@ h3 {
 }
 
 img {
+    width: 100%;
     margin-bottom: 1rem;
     border-bottom: 2px solid #e6e6e6;
 }
